name:                nero
version:             0.1
synopsis:            Grandiose web development
description:         Grandiose web development
homepage:            https://github.com/jdnavarro/nero
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
copyright:           Copyright (C) 2014 Danny Navarro
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jdnavarro/nero.git

library
  exposed-modules:     Nero,
                       Nero.Response
                       Nero.Request
                       Nero.Url
  -- other-modules:       
  build-depends:       base >=4.7 && <4.8,
                       text,
                       lens
                       -- regex-applicative
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tasty
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tasty.hs
  build-depends:       base >= 4.7 && <4.8,
                       containers,
                       tasty,
                       tasty-hunit,
                       nero

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             doctests.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.7 && <4.8,
                       Glob,
                       doctest
