name:                nero
version:             0.3.1
synopsis:            Lens-based HTTP toolkit
description:
  This package provides the core functionality of the @Nero@ HTTP toolkit.
  .
  Check the <https://github.com/plutonbrb/nero#nero README> for a more
  detailed explanation.
homepage:            https://github.com/plutonbrb/nero
bug-reports:         https://github.com/plutonbrb/nero/issues
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          Danny Navarro <j@dannynavarro.net>
stability:           experimental
copyright:           Copyright (C) 2015 J. Daniel Navarro
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.4, GHC == 7.8.4, GHC == 7.10.1
extra-source-files:  README.md CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/plutonbrb/nero.git

library
  exposed-modules:     Nero,
                       Nero.Application,
                       Nero.Binary,
                       Nero.Common,
                       Nero.Match,
                       Nero.Param,
                       Nero.Payload,
                       Nero.Prelude,
                       Nero.Response,
                       Nero.Request,
                       Nero.Url
  other-modules:       Nero.Compat
  build-depends:       base >=4.6 && <4.9,
                       bytestring >=0.10.0.2,
                       containers >= 0.5.0.0,
                       text >= 0.11.3.1,
                       bifunctors >= 4.1.1.1,
                       lens >= 4.1.2.1
  default-language:    Haskell2010
  ghc-options:         -Wall
  cpp-options:         -traditional

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             doctests.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.6 && <4.9,
                       Glob,
                       doctest >=0.9.10

test-suite tasty
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             tasty.hs
  ghc-options:         -Wall -threaded
  other-modules:       Test.Nero.Param
                       Test.Nero.Payload
                       Test.Nero.Url
  build-depends:       base >= 4.6 && <4.9,
                       bytestring >=0.10.0.2,
                       text >=0.11.3.1,
                       lens >=4.1.2.1,
                       nero,
                       smallcheck >=1.1,
                       smallcheck-series >=0.4,
                       smallcheck-laws >=0.1,
                       smallcheck-lens >=0.1,
                       tasty >=0.10,
                       tasty-hunit >=0.9,
                       tasty-smallcheck >=0.8
  if impl(ghc < 7.8)
     build-depends:    tagged >=0.7.2
