name:                nero-examples
version:             0.0
synopsis:            Nero examples
homepage:            https://github.com/plutonbrb/nero
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Combined,
                       Hello,
                       SlashRedirect,
                       Param
  build-depends:       base >=4.6 && <4.9,
                       text >=0.11.3.1,
                       nero >=0.3
  default-language:    Haskell2010

test-suite examples
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded
  build-depends:       base >= 4.6 && <4.9,
                       bytestring >=0.10.0.2,
                       text >=0.11.3.1,
                       lens >= 4.1.2.1,
                       nero,
                       nero-examples,
                       tasty,
                       tasty-hunit
